--- a/cursus/templates/index.html
+++ b/cursus/templates/index.html
@@ -14,54 +14,56 @@
     </div>
   </div>
 </section>
-<div class="hero__card">
+<div class="container" style="position: relative">
   <img
     class="hero__card__dot-1"
     src="/static/img/dot-grid-512.png"
     alt="dot-grid-512"
   />
-  <div class="hero__content">
-    <h1 class="hero__heading-1">What this API offers</h1>
-    <p class="hero__paragraph">
-      This is a public, free-to-use API that allows you to query for
-      universities and courses information. The database provides information
-      over 1000 universities globally.
-    </p>
-    <p class="hero__paragraph">
-      With this API, you can query for universities, their domains, their
-      country, their history as well as the courses they offer.
-    </p>
-    <div class="hero__table">
-      <div class="hero__row">
-        <div class="hero__col">
-          <h2 class="hero__heading-2">University</h2>
-          <p class="hero__paragraph">
-            A variety of endpoints that allow you to find and retrieve
-            information about universities based on institution, campuse, etc.
-          </p>
+  <div class="hero__card">
+    <div class="hero__content">
+      <h1 class="hero__heading-1">What this API offers</h1>
+      <p class="hero__paragraph">
+        This is a public, free-to-use API that allows you to query for
+        universities and courses information. The database provides information
+        over 1000 universities globally.
+      </p>
+      <p class="hero__paragraph">
+        With this API, you can query for universities, their domains, their
+        country, their history as well as the courses they offer.
+      </p>
+      <div class="hero__table">
+        <div class="row">
+          <div class="col-12 col-lg-6">
+            <h2 class="hero__heading-2">University</h2>
+            <p class="hero__paragraph">
+              A variety of endpoints that allow you to find and retrieve
+              information about universities based on institution, campuse, etc.
+            </p>
+          </div>
+          <div class="col-12 col-lg-6">
+            <h2 class="hero__heading-2">Departments &amp; Courses</h2>
+            <p class="hero__paragraph">
+              Search for courses and departments' information based on the name,
+              the university, the department, etc.
+            </p>
+          </div>
         </div>
-        <div class="hero__col">
-          <h2 class="hero__heading-2">Departments &amp; Courses</h2>
-          <p class="hero__paragraph">
-            Search for courses and departments' information based on the name,
-            the university, the department, etc.
-          </p>
-        </div>
-      </div>
-      <div class="hero__row">
-        <div class="hero__col">
-          <h2 class="hero__heading-2">Domains &amp; Campusus</h2>
-          <p class="hero__paragraph">
-            Find your university's domain and campus information for a nice and
-            easy integration with your application.
-          </p>
-        </div>
-        <div class="hero__col">
-          <h2 class="hero__heading-2">Biography</h2>
-          <p class="hero__paragraph">
-            Get to know more about the founders, and the history of your
-            universities.
-          </p>
+        <div class="row">
+          <div class="col-12 col-lg-6">
+            <h2 class="hero__heading-2">Domains &amp; Campusus</h2>
+            <p class="hero__paragraph">
+              Find your university's domain and campus information for a nice
+              and easy integration with your application.
+            </p>
+          </div>
+          <div class="col-12 col-lg-6">
+            <h2 class="hero__heading-2">Biography</h2>
+            <p class="hero__paragraph">
+              Get to know more about the founders, and the history of your
+              universities.
+            </p>
+          </div>
         </div>
       </div>
     </div>
@@ -69,13 +71,21 @@
 </div>
 <div class="hero__tryout">
   <div class="hero__table">
-    <div class="hero__row">
-      <div class="hero__col">
+    <div class="row">
+      <div class="col-6">
         <h1 class="hero__heading-1">Want more?</h1>
-        <p class="hero__paragraph">Check out on GitHub for more details.</p>
       </div>
-      <div class="hero__col">
-        <h1 class="hero__heading-1">&nbsp;</h1>
+      <div class="col-6">
+        <p class="hero__paragraph">&nbsp;</p>
+      </div>
+    </div>
+    <div class="row items-center">
+      <div class="col-12 col-lg-6">
+        <p class="hero__paragraph" style="margin-bottom: 0rem;">
+          Check out on GitHub for more details.
+        </p>
+      </div>
+      <div class="col-12 col-lg-6">
         <a
           href="/docs"
           class="btn btn--fluid btn--round"
@@ -84,6 +94,7 @@
           >GITHUB</a
         >
       </div>
+    </div>
     </div>
   </div>
 </div>
