--- a/cursus/templates/macros/footer.html
+++ b/cursus/templates/macros/footer.html
@@ -1,11 +1,11 @@
 {% macro footer() -%}
 <footer class="footer">
   <div class="container container-lg">
-    <div class="row items-center">
-      <div class="col-12 col-md-6">
-        <p>Made with ❤️ by Richard Nguyen</p>
+    <div class="row items-center gap-6 gap-lg-0">
+      <div class="col-12 col-lg-6">
+        <p class="footer__title">Made with ❤️ by Richard Nguyen</p>
       </div>
-      <div class="col-12 col-md-6">
+      <div class="col-12 col-lg-6">
         <div class="footer__legality">
           <div class="footer__legality-wrapper">
             <a class="footer__legality-link" href="#">Privacy</a>
