--- a/cursus/static/css/_footer.css
+++ b/cursus/static/css/_footer.css
@@ -3,8 +3,8 @@
   z-index: 100;
   margin-top: 5rem;
 
-  padding-top: 2rem;
-  padding-bottom: 2rem;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
 
   font-size: var(--cursus-font-lg, 1.25rem);
   background: rgb(var(--cursus-color-primary) / 1);
@@ -13,6 +13,11 @@
 
 .footer__legality {
   display: flex;
+  justify-content: center;
+}
+
+.footer__title {
+  text-align: center;
 }
 
 .footer__legality-wrapper {
@@ -20,7 +25,6 @@
   align-items: center;
   gap: 3rem;
 
-  margin-left: auto
 }
 
 .footer__legality-link {
@@ -34,4 +38,28 @@
 
 .footer__legality-link:hover {
   border-bottom: 1px solid white;
+}
+
+@media screen and (min-width: 768px) {
+  .footer {
+    padding-top: 1.5rem;
+    padding-bottom: 1.5rem;
+  }
+}
+
+@media screen and (min-width: 1024px)  {
+  .footer {
+    padding-top: 2rem;
+    padding-bottom: 2rem;
+  }
+  .footer__title {
+    text-align: left;
+  }
+
+  .footer__legality {
+  }
+
+  .footer__legality-wrapper {
+    margin-left: auto
+  }
 }
