--- a/cursus/static/css/_grid.css
+++ b/cursus/static/css/_grid.css
@@ -78,6 +78,10 @@
   width: 100%;
 }
 
+.gap-0 {
+  gap: 0rem;
+}
+
 .gap-1 {
   gap: var(--cursus-gutter-1, 0.25rem);
 }
@@ -253,6 +257,10 @@
     width: 100%;
   }
 
+  .gap-sm-0 {
+    gap: 0;
+  }
+
   .gap-sm-1 {
     gap: var(--cursus-gutter-1, 0.25rem);
   }
@@ -363,6 +371,12 @@
 }
 
 @media screen and (min-width: 768px) {
+  .container {
+    max-width: 768px;
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
+  }
+
   .container-md {
     max-width: 768px;
     padding-left: 1.5rem;
@@ -427,6 +441,10 @@
   .col-md-12 {
     flex: 0 0 auto;
     width: 100%;
+  }
+
+  .gap-md-0 {
+    gap: 0rem;
   }
 
   .gap-md-1 {
@@ -539,13 +557,15 @@
 }
 
 @media screen and (min-width: 1024px) {
+  .container {
+    max-width: 1024px;
+    padding-left: 2rem;
+    padding-right: 2rem;
+  }
   .container-lg {
     max-width: 1024px;
     padding-left: 2rem;
     padding-right: 2rem;
-
-    margin-left: auto;
-    margin-right: auto;
   }
 
   .col-lg-1 {
@@ -606,6 +626,10 @@
   .col-lg-12 {
     flex: 0 0 auto;
     width: 100%;
+  }
+
+  .gap-lg-0 {
+    gap: 0rem;
   }
 
   .gap-lg-1 {
