--- a/cursus/static/css/_about.css
+++ b/cursus/static/css/_about.css
@@ -40,7 +40,6 @@
   align-items: center;
   gap: 2rem;
 
-
   padding: 1rem;
   background-color: rgb(var(--cursus-color-primary) / 0.1);
   border-left: 4px solid rgb(var(--cursus-color-primary) / 1);
@@ -77,24 +76,22 @@
 }
 
 .about__banner {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-
   position: relative;
-  background: url('/static/img/about-grid.png');
-  background-size: contain;
-  background-repeat: no-repeat;
-
-  width: 1440px;
-  height: 360px;
 
   margin-left: auto;
   margin-right: auto;
 
   padding-top: var(--cursus-gutter-20, 5rem);
   padding-bottom: var(--cursus-gutter-20, 5rem);
+}
+
+.about__banner__heading {
+  position: relative;
+  z-index: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 .about__banner__text {
@@ -107,7 +104,7 @@
 
   max-width: 640px;
 
-  font-size: 6rem;
+  font-size: 4rem;
   font-weight: var(--cursus-font-black, 900);
 }
 
@@ -118,9 +115,27 @@
 
   max-width: 768px;
 
-  font-size: 20px;
+  font-size: 16px;
   font-weight: var(--cursus-font-bold, 600);
   color: rgb(var(--cursus-color-black) / 0.6);
+}
+
+.about__banner__image {
+  position: absolute;
+  left: 0;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  z-index: -10;
+
+  height: 330px;
+
+  display: flex;
+  justify-content: center;
+}
+
+.about__banner__image img {
+  object-fit: cover;
 }
 
 .about__bg-1 {
@@ -132,4 +147,32 @@
   z-index: 1;
   width: 400vw;
   max-width: 3500px;
+}
+
+@media screen and (min-width: 768px) {
+  .about__banner__image {
+    height: 345px;
+  }
+
+  .about__banner__text {
+    font-size: 5rem;
+  }
+
+  .about__banner__sub-text {
+    font-size: 18px;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .about__banner__image {
+    height: 360px;
+  }
+
+  .about__banner__text {
+    font-size: 6rem;
+  }
+
+  .about__banner__sub-text {
+    font-size: 20px;
+  }
 }
