--- a/cursus/templates/about.html
+++ b/cursus/templates/about.html
@@ -3,11 +3,16 @@
 <link rel="stylesheet" href="/static/css/_about.css" />
 {% endblock %} {% block main %} {{ super() }}
 <div class="about__banner">
-  <h1 class="about__banner__text">About Cursus</h1>
-  <h2 class="about__banner__sub-text">
-    The open-source, public all-in-one API to find and retrieve university
-    information, globally.
-  </h2>
+  <div class="about__banner__heading">
+    <h1 class="about__banner__text">About Cursus</h1>
+    <h2 class="about__banner__sub-text">
+      The open-source, public all-in-one API to find and retrieve university
+      information, globally.
+    </h2>
+  </div>
+  <div class="about__banner__image">
+    <img src="/static/img/about-grid.png" width="1440" height="360" />
+  </div>
 </div>
 <section class="container about__section">
   <h1>Why Cursus?</h1>
