--- a/cursus/templates/docs.html
+++ b/cursus/templates/docs.html
@@ -3,10 +3,15 @@ css %} {{ super() }}
 <link rel="stylesheet" href="/static/css/_docs.css" />
 {% endblock %} {% block main %} {{ super() }}
 <div class="docs__banner">
-  <h1 class="docs__banner__text">Documentation</h1>
-  <h2 class="docs__banner__sub-text">
-    It&apos;s simple, easy and free to use.
-  </h2>
+  <div class="docs__banner__heading">
+    <h1 class="docs__banner__text">Documentation</h1>
+    <h2 class="docs__banner__sub-text">
+      It&apos;s simple, easy and free to use.
+    </h2>
+  </div>
+  <div class="docs__banner__image">
+    <img src="/static/img/docs-banner.png" width="1440" height="360" alt="Main doc banner">
+  </div>
 </div>
 <div class="docs__card-wrapper">
   <a href="{{ url_for("views.docs", page_name="search.html") }}" class="docs__card">
@@ -65,6 +70,5 @@ css %} {{ super() }}
       You can also query and get results based on other criteria
     </div>
   </a>
-
-  {% endblock %}
 </div>
+{% endblock %}
