--- a/cursus/templates/_base.html
+++ b/cursus/templates/_base.html
@@ -3,7 +3,7 @@
   <head>
     {% block head %}
     <meta charset="UTF-8" />
-    <meta viewport="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="Cursus" />
 
     <!-- Favicon -->
