--- a/cursus/static/css/_login.css
+++ b/cursus/static/css/_login.css
@@ -4,11 +4,13 @@
   justify-content: center;
   align-items: center;
   height: calc(100vh - 16.75rem);
+  margin-left: 1rem;
+  margin-right: 1rem;
 }
 
 .login__heading {
   margin-bottom: 1rem;
-  font-size: 3rem;
+  font-size: 3.5rem;
   font-weight: 900;
 }
 
@@ -18,27 +20,27 @@
   gap: 2rem;
   width: 100%;
   max-width: 640px;
-  border-radius: 2rem;
+  border-radius: 1.5rem;
   border: 1px solid rgb(var(--cursus-color-primary) / 0.5);
 
-  padding: 2rem;
+  padding: 1rem;
 }
 
 .login__btn {
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 1rem;
   width: 100%;
-  border-radius: 1rem;
+  border-radius: 0.75rem;
   border: none;
   background: rgb(var(--cursus-color-primary));
   color: white;
-  font-size: 1.25rem;
-  font-weight: 500;
   cursor: pointer;
-  padding-top: 0.75rem;
-  padding-bottom: 0.75rem;
+  gap: 0.375rem;
+  font-size: 1rem;
+  font-weight: 500;
+  padding-top: 0.375rem;
+  padding-bottom: 0.375rem;
 }
 
 .login__btn:hover {
@@ -72,4 +74,53 @@
 .login__btn.login__btn--github:hover {
   background: rgb(30, 33, 66);
   color: white;
+}
+
+@media screen and (min-width: 768px) {
+  .login__section {
+    margin-left: 2rem;
+    margin-right: 2rem;
+  }
+
+  .login__container {
+    padding: 1.5rem;
+    border-radius: 1.75rem;
+  }
+
+  .login__heading {
+    font-size: 4rem;
+  }
+
+  .login__btn {
+    gap: 0.5rem;
+    font-size: 1rem;
+    font-weight: 500;
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
+    border-radius: 1rem;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .login__section {
+    margin-left: 4rem;
+    margin-right: 4rem;
+  }
+
+  .login__container {
+    padding: 2rem;
+    border-radius: 2rem;
+  }
+
+  .login__heading {
+    font-size: 5rem;
+  }
+
+  .login__btn {
+    gap: 1rem;
+    font-size: 1.25rem;
+    font-weight: 500;
+    padding-top: 0.75rem;
+    padding-bottom: 0.75rem;
+  }
 }
