--- a/cursus/templates/_base.html
+++ b/cursus/templates/_base.html
@@ -50,7 +50,8 @@
   </head>
   <body>
     <!-- Navbar -->
-    {% import 'macros/navbar.html' as navbar %} {{ navbar.navbar(page_name) }}
+    {% from "macros/navbar.html" import navbar with context %} {{
+    navbar(page_name) }}
 
     <!-- Main -->
     <main style="padding-top: 72px">{% block main %}{% endblock %}</main>
