--- a/cursus/templates/_base.html
+++ b/cursus/templates/_base.html
@@ -39,14 +39,11 @@
       href="https://cdn-uicons.flaticon.com/2.0.0/uicons-regular-rounded/css/uicons-regular-rounded.css"
     />
 
-    {% block css %}
-    <link rel="stylesheet" href="/static/css/index.css" />
-    <link rel="stylesheet" href="/static/css/_grid.css" />
-    <link rel="stylesheet" href="/static/css/_dropdown.css" />
-    <link rel="stylesheet" href="/static/css/_navbar.css" />
-    <link rel="stylesheet" href="/static/css/_footer.css" />
-    <link rel="stylesheet" href="/static/css/_button.css" />
-    {% endblock %} {% endblock %}
+    {% block css %} {% assets filters="cssmin", output="css/core.bundle.css",
+    "css/index.css", "css/_grid.css", "css/_dropdown.css", "css/_navbar.css",
+    "css/_footer.css", "css/_button.css" %}
+    <link rel="stylesheet" href="{{ ASSET_URL }}" />
+    {% endassets %} {% endblock %} {% endblock %}
   </head>
   <body>
     <!-- Navbar -->
