--- a/cursus/templates/_base.html
+++ b/cursus/templates/_base.html
@@ -52,11 +52,12 @@
 
     <!-- Main -->
     <main style="padding-top: 72px">{% block main %}{% endblock %}</main>
-    {% block js %} {% endblock %}
 
     <!-- Footer -->
-    {% import 'macros/footer.html' as footer %} {{ footer.footer() }}
-    <script src="/static/js/dropdown.js"></script>
-    <script src="/static/js/index.js"></script>
+    {% import 'macros/footer.html' as footer %} {{ footer.footer() }} {% block
+    js %} {% assets filters="uglifyjs", output="js/core.bundle.js",
+    "js/dropdown.js", "js/index.js"%}
+    <script src="{{ ASSET_URL }}"></script>
+    {% endassets %} {% endblock %}
   </body>
 </html>
