feat: add autoprefixer for css bundlers

--- a/cursus/templates/_base.html
+++ b/cursus/templates/_base.html
@@ -44,7 +44,8 @@
     "css/_footer.css", "css/_button.css" %}
     <link rel="stylesheet" href="{{ ASSET_URL }}" />
     {% endassets %} {% endblock %} {% endblock %} {% assets
-    filters="scss,cssmin", output="css/min.bundle.css", "scss/global.scss"%}
+    filters="scss,autoprefixer6,cssmin", output="css/min.bundle.css",
+    "scss/global.scss"%}
     <link rel="stylesheet" href="{{ ASSET_URL }}" />
     {% endassets %}
   </head>
