--- a/cursus/templates/index.html
+++ b/cursus/templates/index.html
@@ -14,7 +14,7 @@
     </div>
   </div>
 </section>
-<div class="container" style="position: relative">
+<div class="container-sm container-md container-lg position-relative">
   <img
     class="hero__card__dot-1"
     src="/static/img/dot-grid-512.png"
