chore: navbar to scss

--- a/cursus/static/scss/_root.scss
+++ b/cursus/static/scss/_root.scss
@@ -1,95 +1,95 @@
 :root {
-  --color-black: #1F2328;
-  --color-white: #ffffff;
-  --color-cursus: #8250df;
-  --color-gray-50: #f6f8fa;
-  --color-gray-100: #eaeef2;
-  --color-gray-200: #d0d7de;
-  --color-gray-300: #afb8c1;
-  --color-gray-400: #8c959f;
-  --color-gray-500: #6e7781;
-  --color-gray-600: #57606a;
-  --color-gray-700: #424a53;
-  --color-gray-800: #32383f;
-  --color-gray-900: #24292f;
-  --color-blue-50: #ddf4ff;
-  --color-blue-100: #b6e3ff;
-  --color-blue-200: #80ccff;
-  --color-blue-300: #54aeff;
-  --color-blue-400: #218bff;
-  --color-blue-500: #0969da;
-  --color-blue-600: #0550ae;
-  --color-blue-700: #033d8b;
-  --color-blue-800: #0a3069;
-  --color-blue-900: #002155;
-  --color-green-50: #dafbe1;
-  --color-green-100: #aceebb;
-  --color-green-200: #6fdd8b;
-  --color-green-300: #4ac26b;
-  --color-green-400: #2da44e;
-  --color-green-500: #1a7f37;
-  --color-green-600: #116329;
-  --color-green-700: #044f1e;
-  --color-green-800: #003d16;
-  --color-green-900: #002d11;
-  --color-yellow-50: #fff8c5;
-  --color-yellow-100: #fae17d;
-  --color-yellow-200: #eac54f;
-  --color-yellow-300: #d4a72c;
-  --color-yellow-400: #bf8700;
-  --color-yellow-500: #9a6700;
-  --color-yellow-600: #7d4e00;
-  --color-yellow-700: #633c01;
-  --color-yellow-800: #4d2d00;
-  --color-yellow-900: #3b2300;
-  --color-orange-50: #fff1e5;
-  --color-orange-100: #ffd8b5;
-  --color-orange-200: #ffb77c;
-  --color-orange-300: #fb8f44;
-  --color-orange-400: #e16f24;
-  --color-orange-500: #bc4c00;
-  --color-orange-600: #953800;
-  --color-orange-700: #762c00;
-  --color-orange-800: #5c2200;
-  --color-orange-900: #471700;
-  --color-red-50: #ffebe9;
-  --color-red-100: #ffcecb;
-  --color-red-200: #ffaba8;
-  --color-red-300: #ff8182;
-  --color-red-400: #fa4549;
-  --color-red-500: #cf222e;
-  --color-red-600: #a40e26;
-  --color-red-700: #82071e;
-  --color-red-800: #660018;
-  --color-red-900: #4c0014;
-  --color-purple-50: #fbefff;
-  --color-purple-100: #ecd8ff;
-  --color-purple-200: #d8b9ff;
-  --color-purple-300: #c297ff;
-  --color-purple-400: #a475f9;
-  --color-purple-500: #8250df;
-  --color-purple-600: #6639ba;
-  --color-purple-700: #512a97;
-  --color-purple-800: #3e1f79;
-  --color-purple-900: #2e1461;
-  --color-pink-50: #ffeff7;
-  --color-pink-100: #ffd3eb;
-  --color-pink-200: #ffadda;
-  --color-pink-300: #ff80c8;
-  --color-pink-400: #e85aad;
-  --color-pink-500: #bf3989;
-  --color-pink-600: #99286e;
-  --color-pink-700: #772057;
-  --color-pink-800: #611347;
-  --color-pink-900: #4d0336;
-  --color-coral-50: #fff0eb;
-  --color-coral-100: #ffd6cc;
-  --color-coral-200: #ffb4a1;
-  --color-coral-300: #fd8c73;
-  --color-coral-400: #ec6547;
-  --color-coral-500: #c4432b;
-  --color-coral-600: #9e2f1c;
-  --color-coral-700: #801f0f;
-  --color-coral-800: #691105;
-  --color-coral-900: #510901;
+  --color-black: 31 35 40;
+  --color-white: 255 255 255;
+  --color-cursus: 130 80 223;
+  --color-gray-50: 246 248 250;
+  --color-gray-100: 234 238 242;
+  --color-gray-200: 208 215 222;
+  --color-gray-300: 175 184 193;
+  --color-gray-400: 140 149 159;
+  --color-gray-500: 110 119 129;
+  --color-gray-600: 87 96 106;
+  --color-gray-700: 66 74 83;
+  --color-gray-800: 50 56 63;
+  --color-gray-900: 36 41 47;
+  --color-blue-50: 221 244 255;
+  --color-blue-100: 182 227 255;
+  --color-blue-200: 128 204 255;
+  --color-blue-300: 84 174 255;
+  --color-blue-400: 33 139 255;
+  --color-blue-500: 9 105 218;
+  --color-blue-600: 5 80 174;
+  --color-blue-700: 3 61 139;
+  --color-blue-800: 10 48 105;
+  --color-blue-900: 0 33 85;
+  --color-green-50: 218 251 225;
+  --color-green-100: 172 238 187;
+  --color-green-200: 111 221 139;
+  --color-green-300: 74 194 107;
+  --color-green-400: 45 164 78;
+  --color-green-500: 26 127 55;
+  --color-green-600: 17 99 41;
+  --color-green-700: 4 79 30;
+  --color-green-800: 0 61 22;
+  --color-green-900: 0 45 17;
+  --color-yellow-50: 255 248 197;
+  --color-yellow-100: 250 225 125;
+  --color-yellow-200: 234 197 79;
+  --color-yellow-300: 212 167 44;
+  --color-yellow-400: 191 135 0;
+  --color-yellow-500: 154 103 0;
+  --color-yellow-600: 125 78 0;
+  --color-yellow-700: 99 60 1;
+  --color-yellow-800: 77 45 0;
+  --color-yellow-900: 59 35 0;
+  --color-orange-50: 255 241 229;
+  --color-orange-100: 255 216 181;
+  --color-orange-200: 255 183 124;
+  --color-orange-300: 251 143 68;
+  --color-orange-400: 225 111 36;
+  --color-orange-500: 188 76 0;
+  --color-orange-600: 149 56 0;
+  --color-orange-700: 118 44 0;
+  --color-orange-800: 92 34 0;
+  --color-orange-900: 71 23 0;
+  --color-red-50: 255 235 233;
+  --color-red-100: 255 206 203;
+  --color-red-200: 255 171 168;
+  --color-red-300: 255 129 130;
+  --color-red-400: 250 69 73;
+  --color-red-500: 207 34 46;
+  --color-red-600: 164 14 38;
+  --color-red-700: 130 7 30;
+  --color-red-800: 102 0 24;
+  --color-red-900: 76 0 20;
+  --color-purple-50: 251 239 255;
+  --color-purple-100: 236 216 255;
+  --color-purple-200: 216 185 255;
+  --color-purple-300: 194 151 255;
+  --color-purple-400: 164 117 249;
+  --color-purple-500: 130 80 223;
+  --color-purple-600: 102 57 186;
+  --color-purple-700: 81 42 151;
+  --color-purple-800: 62 31 121;
+  --color-purple-900: 46 20 97;
+  --color-pink-50: 255 239 247;
+  --color-pink-100: 255 211 235;
+  --color-pink-200: 255 173 218;
+  --color-pink-300: 255 128 200;
+  --color-pink-400: 232 90 173;
+  --color-pink-500: 191 57 137;
+  --color-pink-600: 153 40 110;
+  --color-pink-700: 119 32 87;
+  --color-pink-800: 97 19 71;
+  --color-pink-900: 77 3 54;
+  --color-coral-50: 255 240 235;
+  --color-coral-100: 255 214 204;
+  --color-coral-200: 255 180 161;
+  --color-coral-300: 253 140 115;
+  --color-coral-400: 236 101 71;
+  --color-coral-500: 196 67 43;
+  --color-coral-600: 158 47 28;
+  --color-coral-700: 128 31 15;
+  --color-coral-800: 105 17 5;
+  --color-coral-900: 81 9 1;
 }
