--- a/cursus/static/scss/global.scss
+++ b/cursus/static/scss/global.scss
@@ -2,7 +2,9 @@
 @import "mixins";
 
 @import "root";
+@import "normalize";
 
 /* Utility */
 @import "container";
 @import "grid";
+@import "components";
