--- a/cursus/templates/_base.html
+++ b/cursus/templates/_base.html
@@ -24,6 +24,30 @@
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="#8250df" />
 
+    <!-- Open Graph -->
+    <meta property="og:title" content="Cursus" />
+    <meta
+      property="og:description"
+      content="An open-source API repository for university courses "
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://cursus.onrender.com" />
+    <meta property="og:image" content="/static/img/logo-180.png" />
+    <meta property="og:image:width" content="180" />
+    <meta property="og:image:height" content="180" />
+    <meta property="og:image:type" content="image/png" />
+    <meta property="og:locale" content="en_US" />
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:creator" content="@richardmhnguyen" />
+    <meta name="twitter:title" content="Cursus" />
+    <meta
+      name="twitter:description"
+      content="An open-source API repository for university courses "
+    />
+    <meta name="twitter:image" content="/static/img/logo-180.png" />
+
     <!-- CSS -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
